# allegro-hand-ros

./: .gitignore  README.md
src/allegro_hand/launch/: allegro_hand.launch
src/allegro_hand/src/: allegro_hand_joint_pd.cpp  allegro_hand_node.cpp  allegro_hand_node.h  allegro_hand_uname.cpp  allegro_hand_visualizer.cpp
src/allegro_hand_controllers/launch/: allegro_hand.launch
src/allegro_hand_controllers/src/: allegro_node.cpp  allegro_node.h  allegro_node_pd.cpp  allegro_node_sim.cpp  allegro_node_sim.h
src/allegro_hand_description/: allegro_hand_description_left.urdf  allegro_hand_description_left_iason.urdf  allegro_hand_description_left_melodic.urdf  allegro_hand_description_left_melodic_bkup.urdf  allegro_hand_description_right_melodic.urdf  allegro_hand_description_right_moveit.urdf  allegro_hand_description_right_test.urdf
src/allegro_hand_description/bkup/: allegro_hand_description_left_iason.xacro  allegro_hand_description_right_old.urdf
src/allegro_hand_driver/src/: AllegroHandDrv.cpp
src/allegro_hand_moveit/: .setup_assistant  package.xml
src/allegro_hand_moveit/config/: allegro_hand_right.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/allegro_hand_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  warehouse.launch  (+8 more)
src/epfl_allegro_launchers/: CMakeLists.txt  package.xml
src/epfl_allegro_launchers/launch/: epfl_left.launch  epfl_right.launch
(+7 files in other folders)
